# dynalar_v2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
assets/models/statue_1/: Israel Museum Egypt.mtl
assets/models/woman/: Marina_1276.mtl
assets/shaders/fragment/: directional_shadow.frag  light_3d.frag  omnidirectional_shadow.frag  simple_3d.frag  simple_interpolated_color.frag  simple_shadow.frag  simple_texture.frag
assets/shaders/geometry/: omnidirectional_shadow.geom
assets/shaders/vertex/: clip_space.vert  directional_shadow.vert  light_3d.vert  omnidirectional_shadow.vert  simple_3d.vert  simple_shadow.vert  simple_uv.vert
docs/: libraries.md  resources.md
docs/architecture/: overview.md
examples/: sandbox.cpp
src/: main.cpp
src/engine/app/: app.cpp  app.h  base_scene.cpp  base_scene.h  fps_graph.cpp  fps_graph.h  menu_bar.h  scene_manager.cpp  scene_manager.h  scene_menu.cpp  scene_menu.h
src/engine/app/lights/: ambient_light.cpp  ambient_light.h  base_light.cpp  base_light.h  directional_light.cpp  directional_light.h  light_manager.cpp  light_manager.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/engine/app/pre_made_objects/: cube.cpp  cube.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/engine/app/widgets/: fps_graph.cpp  fps_graph.h  menu_bar.cpp  menu_bar.h  properties_editor.cpp  properties_editor.h
src/engine/core/gl/: Renderer.cpp  Renderer.h  camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/engine/core/utils/: error.cpp  error.h  file_system.cpp  file_system.h  log.cpp  log.h  logger.cpp  logger.h
src/engine/core/window/: WindowManager.cpp  WindowManager.h
src/engine/window/: gui.cpp  gui.h  window_manager.cpp  window_manager.h
src/scenes/hello_3D_world/: scene.cpp  scene.h
src/scenes/hello_lights/: scene.cpp  scene.h
src/scenes/hello_texture/: scene.cpp  scene.h
src/scenes/hello_triangle/: scene.cpp  scene.h
